manifests/szurubooru/deployment.yaml
# szurubooru-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: szurubooru-server
  labels:
    app: szurubooru-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: szurubooru-server
  template:
    metadata:
      labels:
        app: szurubooru-server
    spec:
      containers:
      - name: server
        image: szurubooru/server:latest
        volumeMounts:
        - name: data-volume
          mountPath: /data
        - name: config-volume
          mountPath: /opt/app/config.yaml
          subPath: config.yaml
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: szurubooru-data-pvc
      - name: config-volume
        configMap:
          name: szurubooru-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: szurubooru-client
  labels:
    app: szurubooru-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: szurubooru-client
  template:
    metadata:
      labels:
        app: szurubooru-client
    spec:
      containers:
      - name: client
        image: szurubooru/client:latest
        volumeMounts:
        - name: data-volume
          mountPath: /data
          readOnly: true
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: szurubooru-data-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: szurubooru-sql
  labels:
    app: szurubooru-sql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: szurubooru-sql
  template:
    metadata:
      labels:
        app: szurubooru-sql
    spec:
      containers:
      - name: sql
        image: postgres:11-alpine
        volumeMounts:
        - name: sql-data-volume
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: sql-data-volume
        persistentVolumeClaim:
          claimName: szurubooru-sql-pvc
