manifests/szurubooru/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`img.senk0.com`)
    priority: 10
    middlewares:
    services:
    - kind: Service
      name: szurubooru-client
      passHostHeader: true
      port: 443
  tls:
    secretName: senk0
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-http
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Host(`img.senk0.com`)
    priority: 10
    middlewares:
    services:
    - kind: Service
      name: szuru-booru-client
      passHostHeader: true
      port: 80
